--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -37,7 +37,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-20.04
-    container: node:16.16.0
+    # container: node:16.16.0
     permissions:
       contents: write
 
